-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-aarch32-8
-
Component/s: hotspot
-
None
-
aarch32
-
linux
The following problem is observed in some cases when executing OSRed method being invoked from compiled code:
# SIGSEGV (0xb) at pc=0x75577848, pid=4639, tid=1662383200
#
# Problematic frame:
# V [libjvm.so+0x21c848] frame::sender(RegisterMap*) const+0x1c8
on release build
e.g. this happens when exception is created during execution of method being compiled with OSR mechanism
# SIGSEGV (0xb) at pc=0x75577848, pid=4639, tid=1662383200
#
# Problematic frame:
# V [libjvm.so+0x21c848] frame::sender(RegisterMap*) const+0x1c8
on release build
e.g. this happens when exception is created during execution of method being compiled with OSR mechanism