8151284: aarch32: on-stack replacement does not work properly when invoked from compiled Reviewed-by: enevill Contributed-by: andrey.petushkov@gmail.com